--- a/_posts/2023-02-15-Dash.md
+++ b/_posts/2023-02-15-Dash.md
@@ -19,10 +19,6 @@ Link: [https://github.com/Yeongwookang/DASH](https://github.com/Yeongwookang/DAS
 - 결재
 - 추천 (데이터 전처리 및 화면 처리)
 
-<br>
-<br>
-<br>
-
 ## **기술스택**
 
 #### Back-end
@@ -37,19 +33,12 @@ Link: [https://github.com/Yeongwookang/DASH](https://github.com/Yeongwookang/DAS
 #### ETC
 - Git, Bootstrap
 
-
-<br>
-<br>
-
 ## **개요**
 >서울시 지하철 인원정보를 유동인구로 해석하였습니다. 
 서울 열린 데이터광장과 국토부 자료를 취합하여 지리데이터를 만들고, 
 공유 모빌리티를 당시 가장 많은 점유율을 가지고 있던 전동 킥보드로 선정하여, 
 그룹웨어 + 전동 킥보드 대여소 위치 추천 시스템 (Python, QGIS 활용) 구현하였습니다.
 {: .prompt-info}
-
-<br>
-<br>
 
 ## **구현 기능**
 
@@ -60,7 +49,6 @@ Link: [https://github.com/Yeongwookang/DASH](https://github.com/Yeongwookang/DAS
 각 페이지는 반응형웹이고, 상단 sticky-top 바를 갖습니다. 
 출/퇴근, 연차, 공지사항, 진행중인 결재, 일정, 커뮤니티, 우측 사이드바로 구성되어있습니다.
 {: .prompt-info}
-<br>
 
 #### **출/퇴근**
 - 출근을 눌러 해당 시간으로 출근시각 찍히고 퇴근 가능 시간이 계산됨
@@ -74,16 +62,11 @@ Link: [https://github.com/Yeongwookang/DASH](https://github.com/Yeongwookang/DAS
 #### **우측 사이드바**
 - jquery를 활용하여 항상 오른쪽에서 똑같은 위치에 스크롤 됨
 
-<br>
-<br>
-<br>
-
 ### **결재**
 >결재는 일반적인 결재를 최대한 구현 하였습니다. 
 기안자는 session에 저장된 정보를 가져오며, 참조기능으로 다른 사람을 참조 합니다. 
 프로젝트 단위로 문서를 묶을수 있는 기능인 타임라인을 통해 결재를 관리할 수 있습니다.
 {: .prompt-info}
-<br>
 
 #### **결재**
 - 결제 메인 페이지는 진행중인 결재 보기
@@ -95,27 +78,16 @@ Link: [https://github.com/Yeongwookang/DASH](https://github.com/Yeongwookang/DAS
 - 타임라인을 선택하면 오른쪽 페이지에 ajax를 통해 가져옴
 - 하위 결재문서에 바로 이동가능
 
-
-<br>
-<br>
-<br>
-
 ### **추천**
 >서울시 데이터 광장상의 지하철 인원정보에 따른 이용율 높은 상위 20개 역의 정보를 가져와
 QGIS를 통해 해당 역 주변 100m, 200m, 300m 반경원을 만들고, 도로 및 건물을 제외하여 실제로 주차가 가능한 구역을 나타냅니다.
 {: .prompt-info}
-<br>
 
 #### **추천**
 - 추천은 메인 기능으로서 leaflet.js를 사용
 - 초기 화면은 서울 중심으로 지도가 띄워짐
 - 필터를 통해 반경 조건을 설정가능
 - 조건에 맞는 서울시 지하철 역 반경 내 도로및 건물을 제외한 주차가능 구역을 보여줌
-
-<br>
-<br>
-<br>
-<br>
 
 ## **프로젝트를 마무리하며**
 
@@ -127,19 +99,13 @@ QGIS를 통해 해당 역 주변 100m, 200m, 300m 반경원을 만들고, 도로
 - Legacy코드에서 logback과 slf4j를 활용하고 AOP단계를 조정하여 로그 단순화
 - leaflet.js, QGIS를 원문 사이트를 통해 학습하여 처리 
 
-<br>
-
 ### **소감**
-geojson으로 만들어주는 프로그램인 QGIS를 활용하여 shp파일 여러개를 하나의 geojson파일로 변경하였다. 
-
+geojson으로 만들어주는 프로그램인 ```QGIS```를 활용하여 shp파일 여러개를 하나의 geojson파일로 변경하였다. 
 이 과정에서 shp 파일의 공간좌표계등의 별도의 공부가 필요했지만, 
 원래 공학을 하던 입장에서 필요한 것을 새로 배워서 적용하는것에 대한 부담이 적었다.
 
-<br>
 ### **프로젝트 주제에 관하여**
-프로젝트 주제가 다소 난해한데, 나는 쌍용강북교육센터의 과정의 일환으로 프로젝트를 진행하였다. 개설때부터 정해진 주제여서 변경이 어렵다고 하여 팀원들과 많은 상의를 거쳐서 주제에 대한 방향성을 잡아갔다. 
- 
+프로젝트 주제가 다소 난해한데, 나는 ```쌍용강북교육센터```의 과정의 일환으로 프로젝트를 진행하였다. 개설때부터 정해진 주제여서 변경이 어렵다고 하여 팀원들과 많은 상의를 거쳐서 주제에 대한 방향성을 잡아갔다. 
 주제가 난해하여 힘들었던 점이 많았지만, 한편으로는, 클라이언트가 항상 주제를 개발자 친화적으로 주는 경우보다는 아닌 경우에 대한 좋은 경험이 되었다고 생각한다.   
-
 앞으로도, 팀원들과 많이 상의하고 한 단계씩 자료를 찾아 가닥을 잡아가면, 반드시 해결할 수 있다고 믿는다.  
 
