--- a/_posts/2023-05-31-AWS.md
+++ b/_posts/2023-05-31-AWS.md
@@ -1,11 +1,11 @@
 ---
 title : 클라우드 컴퓨팅과 AWS
 date : 2023-05-31 00:00:00 +09:00
-categories : [AWS]
+categories : [CI/CD, AWS]
 tags : [study, aws, cloud] 
 ---
 
-#### **클라우드 컴퓨팅 (Cloud Computing)**
+## **클라우드 컴퓨팅 (Cloud Computing)**
 인터넷을 통해 연결된 원격 컴퓨터를 활용하는 기술
 
 >개인 PC가 있는데 굳이 원격 컴퓨터를 이용해야할까?
@@ -19,6 +19,7 @@ tags : [study, aws, cloud]
 - 우리나라 기준: 아마존 1위, MS 2위, Naver 3위
 - 국내에서 aws의 비중은 50퍼센트 이상 
 
+<br>
 ## **AWS EC2**
 
 #### **AWS EC2 (Amazon Web Services Elastic Computing Cloud)**
