--- a/_posts/2023-06-01-Node.js.md
+++ b/_posts/2023-06-01-Node.js.md
@@ -4,75 +4,73 @@ date : 2023-06-01 00:00:00 +09:00
 categories : [Node.js]
 tags : [study] 
 ---
-## **Node.js?**
+# **Node.js?**
 Back-end 개발에서 Javascript 문법을 사용하여 비동기 프로그래밍을 돕는 런타임 환경이다.
 
 많이들 사용하는 Node.js와 express 패키지를 사용해보려고 한다.
 
-<br>
-
-### **장점?**
+## 장점
 1. 단일 스레드(Thread) 논블로킹(Non-blocking I/O) 이벤트기반 비동기 방식이라 성능이 좋음
 2. 백엔드에서도 javascript문법을 활용할 수 있게되어 생산성이 높아짐
 3. 내장 HTTP서버 라이브러리를 가지고있어 별도의 소프트웨어 없이 동작가능
 4. npm내에 많은 모듈이 있음
 
 <br>
+## 개념 정리
+### 단일 스레드 (Single Thread)
+- 하나의 프로세스에서 하나의 스레드 실행, 하나의 레지스터와 스택으로 표현 
+- 대응되는 개념은 멀티 스레드이다.
+
+### 논블로킹 (Non-blocking I/O)
+- I/O 작업중 유저프로세스는 대기하는 방식이다.
+- 논블로킹은 I/O작업중 유저프로세스의 작업을 중단하지 않는다.
+- 작업을 블로킹 되지 않는 방식으로 조율해야해서 코드가 복잡할수있음
+- 비동기 프로그래밍 패턴과 콜백, 프로미스, async/await 등을 이해하고 활용해야함
+- 순차적 프로그래밍 방식이 아니기 때문에, 디버깅과 예외처리가 어려움
+- 대응되는 개념은 블로킹(Blocking I/O)이다.
+
+### 비동기 프로그래밍
+이벤트 기반 비동기 방식을 활용하여 코드의 효율성과 성능을 향상 시키기위해 사용되는 프로그래밍 패턴
+
+#### 콜백패턴
+- 기본적인 비동기 프로그래밍 패턴
+- 작업이 완료되었을때 호출할 콜백 함수를 지정하는 방식
+- 단순작업에는 유용하지만, 중첩된 콜백으로 인해 복잡성은 올라가고 가독성이 저하될수 있음
+- function( () => {} , ) 의 람다식 부분이 콜백함수이다.
+
+#### 프로미스패턴
+- 콜백 패턴의 단점을 보완하기위해 등장한 패턴
+- 비동기 작업을 수행하는 함수가 프로미스 객체를 반환함
+- 작업이 완료되면 프로미스가 이행되고, 실패시 거부됨
+- .then(), catch() 메서드를 통해 성공 및 실패시 동작을 지정할 수 있음
+
+#### async/await 패턴
+- async 함수 내에서 await 키워드를 사용하여 프로미스가 이행될때 까지 대기하고 결과를 반환 받을 수 있음
+- 프로미스의 중첩을 피할 수 있음
+
+#### 이벤트/옵저버 패턴
+- 주로 이벤트 기반 프레임워크에서 사용되는 패턴으로, 이벤트 발생과 이벤트 핸들링을 분리하여 구현
+- 이벤트 발생시 등록된 옵저버들에게 알림을 보내며, 비동기적으로 작업을 처리할 수 있음
+
 <br>
+## 설치
 
-## **개념 정리**
-
-### **단일 스레드 (Single Thread)**
->하나의 프로세스에서 하나의 스레드 실행, 하나의 레지스터와 스택으로 표현 대응되는 개념은 멀티 스레드이다.
-{: .prompt-tip}
-
-### **논블로킹 (Non-blocking I/O)**
-반대는 블로킹(Blocking I/O) 으로 I/O 작업중 유저프로세스는 대기하는 방식이다.
-논블로킹은 I/O작업중 유저프로세스의 작업을 중단하지 않는다.
-작업을 블로킹 되지 않는 방식으로 조율해야해서 코드가 복잡할수있음
-비동기 프로그래밍 패턴과 콜백, 프로미스, async/await 등을 이해하고 활용해야함
-순차적 프로그래밍 방식이 아니기 때문에, 디버깅과 예외처리가 어려움
-
-### **비동기 프로그래밍**
->이벤트 기반 비동기 방식을 활용하여 코드의 효율성과 성능을 향상 시키기위해 사용되는 프로그래밍 패턴
-{: .prompt-tip}
-
-#### **콜백패턴**
-기본적인 비동기 프로그래밍 패턴
-작업이 완료되었을때 호출할 콜백 함수를 지정하는 방식
-단순작업에는 유용하지만, 중첩된 콜백으로 인해 복잡성은 올라가고 가독성이 저하될수 있음
-function( () => {} , ) 의 람다식 부분이 콜백함수이다.
-
-#### **프로미스패턴**
-콜백 패턴의 단점을 보완하기위해 등장한 패턴
-비동기 작업을 수행하는 함수가 프로미스 객체를 반환함
-작업이 완료되면 프로미스가 이행되고, 실패시 거부됨
-.then(), catch() 메서드를 통해 성공 및 실패시 동작을 지정할 수 있음
-
-#### **async/await 패턴**
-async 함수 내에서 await 키워드를 사용하여 프로미스가 이행될때 까지 대기하고 결과를 반환 받을 수 있음
-프로미스의 중첩을 피할 수 있음
-#### **이벤트/옵저버 패턴**
-주로 이벤트 기반 프레임워크에서 사용되는 패턴으로, 이벤트 발생과 이벤트 핸들링을 분리하여 구현
-이벤트 발생시 등록된 옵저버들에게 알림을 보내며, 비동기적으로 작업을 처리할 수 있음
-
-## **설치**
-
-#### **Node.js  설치**
->[https://nodejs.org/ko](https://nodejs.org/ko) 에서 LTS를 설치했다.
+#### Node.js  설치
+>*[https://nodejs.org/ko](https://nodejs.org/ko) 에서 LTS를 설치했다.*
 {: .prompt-info}
 폴더를 영어로만 이루어진 경로로 만들어 npm init 을 입력하면 된다.
 
-#### **npm express**
-> 공식 문서: [https://www.npmjs.com/package/express?activeTab=readme](https://www.npmjs.com/package/express?activeTab=readme)
+#### npm express
+> *공식 문서: [https://www.npmjs.com/package/express?activeTab=readme](https://www.npmjs.com/package/express?activeTab=readme)*
 {: .prompt-info}
 설치는 터미널에서 npm i express 입력
 
 이후 cd 등으로 경로를 지정하고 node 파일명 으로 서버를 간단하게 켤 수 있다.
 
-## **생각들..**
+<br>
+## 생각들..
 
-#### **Node.js 는 java/spring을 대체할까?**
+#### Node.js 는 java/spring을 대체할까?
 아니라고 생각한다. 위의 구조상 봤을때 결국 단일스레드 여러개가 일을 동시에 처리하는 방식이기 때문에 
 하나의 요청이 크다면 처리하는데 시간이 오래걸릴 것이다. 
 작은 규모의 서비스를 만드는데 좋아보이고 배우기가 쉽다는것이 장점이 될 것이다.
