--- a/_posts/2023-03-01-CICD.md
+++ b/_posts/2023-03-01-CICD.md
@@ -60,6 +60,11 @@ end
 엄밀하게는 CI/CD 툴이 아니지만 CI/CD 워크플로우이다.
 {: .prompt-tip}
 
+## 내가 하고싶은 CI/CD
+
+![CICD](/assets/img/cicd.png)
+이 블로그를 ```gitHub Actions```로 관리중인데, ```Jenkins - docker - kubernetes```로 배포하는 방법을 알고싶다.
+
 ## CI/CD는 왜 필요한가?
 여러명의 개발자가 동시에 개발함에 있어서 자신의 코드를 합치게 되는데, 문제가 있는 코드를 합치고 이 사실을 몰랐다면, 버그를 발생한 시점에 그 이후에 합쳐진 모든 코드를 다 봐야하므로 생산성이 매우 떨어진다.
 
