--- a/_posts/2023-02-15-Dash.md
+++ b/_posts/2023-02-15-Dash.md
@@ -15,8 +15,8 @@ tags : [project]
 - 프로젝트 주제 해석
 - 아키텍처 디자인
 - 전반적인 레이아웃 (Bootstrap을 활용한 협업 기틀)
-- 결재
-- 추천 (데이터 전처리 및 화면 처리)
+- api 개발(결재)
+- 추천 화면 상 데이터 전처리 및 화면 처리
 
 <br>
 ## **기술스택**
