--- a/_posts/2023-03-01-CICD.md
+++ b/_posts/2023-03-01-CICD.md
@@ -1,7 +1,7 @@
 ---
 title : CI/CD?
 date : 2023-03-01 00:00:00 +09:00
-categories : [CI/CD]
+categories : [CI/CD,CI/CD]
 tags : [study, ci, cd] 
 mermaid: true
 ---
