--- a/_posts/2023-04-21-Spring.md
+++ b/_posts/2023-04-21-Spring.md
@@ -1,7 +1,7 @@
 ---
 title : Spring
 date : 2023-04-21 00:00:00 +09:00
-categories : [Backend, ComputerScience]
+categories : [Backend, Framework]
 tags : [study, backend, cs, spring] 
 mermaid: true
 ---
