--- a/_posts/2023-04-21-Spring.md
+++ b/_posts/2023-04-21-Spring.md
@@ -1,8 +1,8 @@
 ---
 title : Spring
 date : 2023-04-21 00:00:00 +09:00
-categories : [Backend, Framework]
-tags : [study, backend, cs, spring] 
+categories : [Java,Spring]
+tags : [study, cs, spring] 
 mermaid: true
 ---
 ##  Spring의 역사
@@ -93,28 +93,6 @@ Spring은 2004년 3월에 1.0이 배포됨
 - ```spring-orm``` : ORM(Object-Relational Mapping)프레임워크와 스펙(JPA, H2 등) 과의 통합을 제공한다.
 - ```spring-oxm``` : XML 매핑통합객체를 제공한다. JAXB, Castor 등과 같은 프레임워크를 지원한다.
 - ```spring-jms``` : 상용구 코드를 방지하기 위해 JMS를 추상화 한다.
-
-## Spring Project 중 중요한 것은 무엇일까?
-
-### SpringBoot
-마이크로 서비스 및 웹 애플리케이션을 개발하는 동안 해결해야 할 과제는 다음과 같다.
-
-- 프레임워크 선택 및 호환가능한 프레임워크 버전 결정
-- 개발 환경이 바뀔 수도 있다
-- 상태 점검 및 모니터링 - 애플리케이션의 특정 부분이 다운된 경우에 알림 제공
-- 배포 환경 결정 및 애플리케이션 구성
-
-SpringBoot는 이러한 모든 문제를 해결할 수 있다.
-
-
-### SpringCloud
-
-SpringCloud는 분산 시스템의 일반적인 패턴을 위한 솔루션을 제공한다. 스프링 클라우드로 공통 패턴을 구현하는 어플리케이션을 신속하게 생성할 수 있다.
-
-### SpringData
-### SpringBatch
-### SpringSecurity
-### SpringHATEOAS
 
 
 
